chore: add raw_fps example

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,5 +5,9 @@ target_link_libraries(sample_minimal libcamera-opencv opencv_highgui)
 
 add_executable(sample sample.cpp)
 target_link_libraries(sample
-  libcamera-opencv opencv_highgui CLI11::CLI11
+    libcamera-opencv opencv_highgui CLI11::CLI11
 )
+
+add_executable(raw_fps raw_fps.cpp)
+target_link_libraries(raw_fps
+    libcamera-opencv PkgConfig::libcamera CLI11::CLI11)
